<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jtheories</groupId>
    <artifactId>JTheories</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>JTheories</name>
    <description>A property-based testing library</description>
    <url>https://github.com/hryuk/JTheories</url>
    <inceptionYear>2021</inceptionYear>

    <properties>
        <project.java.version>11</project.java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <plugin.prettier.goal>write</plugin.prettier.goal>
    </properties>

    <issueManagement>
        <system>GitHub</system>
        <url>https://www.github.com/hryuk/JTheories/issues</url>
    </issueManagement>

    <ciManagement>
        <system>Github</system>
        <url>https://www.github.com/hryuk/JTheories/actions</url>
        <notifiers/>
    </ciManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.7.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>core</module>
        <module>generators</module>
        <module>examples</module>
        <module>junit</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <!-- TODO: Investigate if we can get rid of this  -->
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <!---->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>com.hubspot.maven.plugins</groupId>
                <artifactId>prettier-maven-plugin</artifactId>
                <version>0.13</version>
                <configuration>
                    <prettierJavaVersion>1.0.2</prettierJavaVersion>
                    <printWidth>90</printWidth>
                    <tabWidth>2</tabWidth>
                    <useTabs>true</useTabs>
                    <ignoreConfigFile>true</ignoreConfigFile>
                    <ignoreEditorConfig>true</ignoreEditorConfig>
                    <inputGlobs>
                        <inputGlob>src/main/java/**/*.java</inputGlob>
                        <inputGlob>src/test/java/**/*.java</inputGlob>
                    </inputGlobs>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>${plugin.prettier.goal}</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>CI</id>
            <activation>
                <property>
                    <name>env.CI</name>
                </property>
            </activation>
            <properties>
                <plugin.prettier.goal>check</plugin.prettier.goal>
            </properties>
        </profile>
    </profiles>

</project>
